[gd_scene load_steps=10 format=3 uid="uid://dj12y0pl0bonl"]

[ext_resource type="Script" path="res://scripts/ui/userui.gd" id="1_1vgaj"]
[ext_resource type="Script" path="res://scripts/main/menu_settings.gd" id="2_j45tk"]
[ext_resource type="Script" path="res://scripts/ui/Exit.gd" id="3_1pmu4"]

[sub_resource type="Animation" id="Animation_guulw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExitCont:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(331, 269.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorBackground:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -600)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MenuSettings:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_erktr"]
resource_name = "ToExit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorBackground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 5.85634),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.294118)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExitCont:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.4),
"transitions": PackedFloat32Array(1, 0.133972),
"update": 0,
"values": [Vector2(331, -60.847), Vector2(331, 269.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0112352),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -600), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_jrjco"]
resource_name = "ToCancelExit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorBackground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.294118), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExitCont:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.052556),
"update": 0,
"values": [Vector2(331, 269.5), Vector2(331, -60)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.299, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -600)]
}

[sub_resource type="Animation" id="Animation_a6j06"]
resource_name = "ToMenu"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../MenuSettings:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(800, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_0dww4"]
resource_name = "ToHideMenu"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../MenuSettings:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-800, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8b6sp"]
_data = {
"RESET": SubResource("Animation_guulw"),
"ToCancelExit": SubResource("Animation_jrjco"),
"ToExit": SubResource("Animation_erktr"),
"ToHideMenu": SubResource("Animation_0dww4"),
"ToMenu": SubResource("Animation_a6j06")
}

[node name="UserUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1vgaj")

[node name="MenuSettings" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 800.0
offset_right = 800.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_j45tk")

[node name="ColorRect" type="ColorRect" parent="MenuSettings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 10.0
offset_right = -25.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="MSCont" type="MarginContainer" parent="MenuSettings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 15.0
offset_right = -30.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2

[node name="MSVCont" type="VBoxContainer" parent="MenuSettings/MSCont"]
layout_mode = 2

[node name="MSTitleHCont" type="HBoxContainer" parent="MenuSettings/MSCont/MSVCont"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MenuSettings/MSCont/MSVCont/MSTitleHCont"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.133333, 0.133333, 0.133333, 0.784314)

[node name="TitleLabel" type="Label" parent="MenuSettings/MSCont/MSVCont/MSTitleHCont"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="MenuSettings/MSCont/MSVCont/MSTitleHCont"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.133333, 0.133333, 0.133333, 0.784314)

[node name="MSHCont" type="HBoxContainer" parent="MenuSettings/MSCont/MSVCont"]
layout_mode = 2
size_flags_vertical = 3

[node name="MSVCont" type="VBoxContainer" parent="MenuSettings/MSCont/MSVCont/MSHCont"]
layout_mode = 2

[node name="MSTabVCont" type="VBoxContainer" parent="MenuSettings/MSCont/MSVCont/MSHCont/MSVCont"]
layout_mode = 2
size_flags_vertical = 3

[node name="GeneralButton" type="Button" parent="MenuSettings/MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont"]
layout_mode = 2
text = "General"

[node name="VideoButton" type="Button" parent="MenuSettings/MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont"]
layout_mode = 2
text = "Video"

[node name="AudioButton" type="Button" parent="MenuSettings/MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont"]
layout_mode = 2
text = "Audio"

[node name="ControsButton" type="Button" parent="MenuSettings/MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont"]
layout_mode = 2
text = "Controls"

[node name="ExtrasButton" type="Button" parent="MenuSettings/MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont"]
layout_mode = 2
text = "Extras"

[node name="DebugButton" type="Button" parent="MenuSettings/MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont"]
layout_mode = 2
text = "Degub"

[node name="ColorRect" type="ColorRect" parent="MenuSettings/MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.133333, 0.133333, 0.133333, 0.784314)

[node name="MSBackHCont" type="HBoxContainer" parent="MenuSettings/MSCont/MSVCont/MSHCont/MSVCont"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MenuSettings/MSCont/MSVCont/MSHCont/MSVCont/MSBackHCont"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="ApplyButton" type="Button" parent="MenuSettings/MSCont/MSVCont/MSHCont/MSVCont/MSBackHCont"]
layout_mode = 2
size_flags_horizontal = 3
text = "Apply"

[node name="MSTabsHCont" type="HBoxContainer" parent="MenuSettings/MSCont/MSVCont/MSHCont"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Exit" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -600.0
offset_bottom = -600.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_1pmu4")

[node name="ColorBackground" type="ColorRect" parent="Exit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="ExitCont" type="MarginContainer" parent="Exit"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_top = 269.5
offset_right = 69.0
offset_bottom = 330.5
grow_horizontal = 2

[node name="MenuBackground" type="ColorRect" parent="Exit/ExitCont"]
layout_mode = 2
color = Color(0.133333, 0.133333, 0.133333, 0.784314)

[node name="VCont" type="VBoxContainer" parent="Exit/ExitCont"]
layout_mode = 2

[node name="CuestionLabel" type="Label" parent="Exit/ExitCont/VCont"]
layout_mode = 2
size_flags_vertical = 6
text = "Do you want exit?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HCont" type="HBoxContainer" parent="Exit/ExitCont/VCont"]
layout_mode = 2
size_flags_vertical = 3

[node name="YesButton" type="Button" parent="Exit/ExitCont/VCont/HCont"]
layout_mode = 2
size_flags_horizontal = 3
text = "Yes"

[node name="NoButton" type="Button" parent="Exit/ExitCont/VCont/HCont"]
layout_mode = 2
size_flags_horizontal = 3
text = "No"

[node name="AnimateUI" type="AnimationPlayer" parent="."]
root_node = NodePath("../Exit")
libraries = {
"": SubResource("AnimationLibrary_8b6sp")
}

[connection signal="pressed" from="MenuSettings/MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont/GeneralButton" to="MenuSettings" method="_on_general_button_pressed" flags=18]
[connection signal="pressed" from="MenuSettings/MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont/VideoButton" to="MenuSettings" method="_on_video_button_pressed" flags=18]
[connection signal="pressed" from="MenuSettings/MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont/AudioButton" to="MenuSettings" method="_on_audio_button_pressed" flags=18]
[connection signal="pressed" from="MenuSettings/MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont/ControsButton" to="MenuSettings" method="_on_contros_button_pressed" flags=18]
[connection signal="pressed" from="MenuSettings/MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont/ExtrasButton" to="MenuSettings" method="_on_extras_button_pressed" flags=18]
[connection signal="pressed" from="MenuSettings/MSCont/MSVCont/MSHCont/MSVCont/MSTabVCont/DebugButton" to="MenuSettings" method="_on_debug_button_pressed" flags=18]
[connection signal="pressed" from="MenuSettings/MSCont/MSVCont/MSHCont/MSVCont/MSBackHCont/BackButton" to="MenuSettings" method="_on_back_button_pressed" flags=18]
[connection signal="pressed" from="Exit/ExitCont/VCont/HCont/YesButton" to="Exit" method="_on_yes_button_pressed" flags=18]
[connection signal="pressed" from="Exit/ExitCont/VCont/HCont/NoButton" to="." method="_on_no_button_pressed"]
[connection signal="pressed" from="Exit/ExitCont/VCont/HCont/NoButton" to="Exit" method="_on_no_button_pressed" flags=18]
[connection signal="animation_finished" from="AnimateUI" to="." method="_on_animate_exit_animation_finished"]
